Replace to use Named

--- a/extensions/jms/runtime/src/main/doc/usage.adoc
+++ b/extensions/jms/runtime/src/main/doc/usage.adoc
@@ -92,7 +92,7 @@ public void configure() throws Exception {
     from("jms:queue:DEV.QUEUE.XA?transactionManager=#jtaTransactionManager");
 }
 
-@BindToRegistry("jtaTransactionManager")
+@Named("jtaTransactionManager")
 public PlatformTransactionManager getTransactionManager() {
     return new JtaTransactionManager(transactionManager);
 }
