Improve descriptions for xml-jaxp & yaml-io extensions
Fixes #5361

--- a/docs/modules/ROOT/pages/reference/extensions/xml-jaxp.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/xml-jaxp.adoc
@@ -8,7 +8,7 @@
 :cq-native-supported: true
 :cq-status: Stable
 :cq-status-deprecation: Stable
-:cq-description: Camel XML JAXP
+:cq-description: XML JAXP type converters and parsers
 :cq-deprecated: false
 :cq-jvm-since: 1.0.0
 :cq-native-since: 1.0.0
@@ -18,7 +18,7 @@ ifeval::[{doc-show-badges} == true]
 [.badge-key]##JVM since##[.badge-supported]##1.0.0## [.badge-key]##Native since##[.badge-supported]##1.0.0##
 endif::[]
 
-Camel XML JAXP
+XML JAXP type converters and parsers
 
 [id="extensions-xml-jaxp-maven-coordinates"]
 == Maven coordinates
