generalize kubernetes version label updates to all examples in release procedure

--- a/docs/modules/ROOT/pages/contributor-guide/release-guide.adoc
+++ b/docs/modules/ROOT/pages/contributor-guide/release-guide.adoc
@@ -369,7 +369,7 @@ $ git fetch upstream
 $ git reset --hard upstream/main
 $ ./mvnw-for-each.sh versions:set -DnewVersion=$NEW_CQ_VERSION
 # Update version labels in Kubernetes resources
-$ ./mvnw process-sources -f file-bindy-ftp/pom.xml
+$ ./mvnw-for-each.sh process-sources
 $ git add -A
 $ git commit -m "Tag $NEW_CQ_VERSION"
 $ git tag $NEW_CQ_VERSION
@@ -390,7 +390,7 @@ $ git checkout camel-quarkus-main
 $ git reset --hard main
 $ ./mvnw org.l2x6.cq:cq-maven-plugin:2.10.0:examples-set-platform -Dcq.camel-quarkus.version=${NEXT_CQ_VERSION}-SNAPSHOT -Dcq.newVersion=${NEXT_CQ_VERSION}-SNAPSHOT
 # Update version labels in Kubernetes resources
-$ ./mvnw process-sources -f file-bindy-ftp/pom.xml
+$ ./mvnw-for-each.sh process-sources
 $ git add -A
 $ git commit -m "Next is $NEXT_CQ_VERSION"
 $ git push upstream camel-quarkus-main --force-with-lease
