jta: fix dataSource bean reference in documentation

--- a/extensions/jta/runtime/src/main/doc/usage.adoc
+++ b/extensions/jta/runtime/src/main/doc/usage.adoc
@@ -6,8 +6,8 @@ Refer to the https://quarkus.io/guides/transaction[Quarkus Transaction guide] fo
 ----
 from("direct:transaction")
     .transacted()
-    .to("sql:INSERT INTO A TABLE ...?dataSource=ds1")
-    .to("sql:INSERT INTO A TABLE ...?dataSource=ds2")
+    .to("sql:INSERT INTO A TABLE ...?dataSource=#ds1")
+    .to("sql:INSERT INTO A TABLE ...?dataSource=#ds2")
     .log("all data are in the ds1 and ds2")
 ----
 
