--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -273,6 +273,7 @@
 *** xref:reference/extensions/splunk.adoc[Splunk]
 *** xref:reference/extensions/splunk-hec.adoc[Splunk HEC]
 *** xref:reference/extensions/spring-rabbitmq.adoc[Spring RabbitMQ]
+*** xref:reference/extensions/spring-redis.adoc[Spring Redis]
 *** xref:reference/extensions/stax.adoc[StAX]
 *** xref:reference/extensions/stitch.adoc[Stitch]
 *** xref:reference/extensions/stomp.adoc[Stomp]
