--- a/integration-tests/ftp/src/test/resources/readme.adoc
+++ b/integration-tests/ftp/src/test/resources/readme.adoc
@@ -18,7 +18,7 @@ openssl genrsa -out ca.key 2048
 openssl req -new -subj '/C=CA/L=camel-ftp/O=camel-ftp/CN=localhost' -x509 -key ca.key -out ca.crt
 . Very easy way to sign a certificate
 [source]
-openssl x509 -req -in test.csr -CA ca.crt -CAkey ca.key -CAcreateserial -out test.crt
+openssl x509 -req -in test.csr -CA ca.crt -CAkey ca.key -CAcreateserial -out test.crt -days 10000
 . Create a kyestore
 [source]
 openssl pkcs12 -export -in test.crt -inkey test.key -certfile ca.crt -name "serverftp" -out keystore.p12 -passout pass:password -keypbe aes-256-cbc -certpbe aes-256-cbc
