--- a/integration-tests/kafka-sasl-ssl/README.adoc
+++ b/integration-tests/kafka-sasl-ssl/README.adoc
@@ -1,26 +1,17 @@
 == Camel Quarkus Kafka SASL SSL integration tests
 
-To regenerate the SSL key and trust stores, do the following:
+To regenerate the SSL certificates and trust stores for use with local host testing run the following script:
 
 [source,shell]
 ----
 cd src/test/resources/config
-rm -f *.p12
+./regenerate-certificates.sh
+----
 
-export SECRET=kafkas3cret
-export JKS_FILE=kafka-keystore.jks
-export JKS_TRUST_FILE=kafka-truststore.jks
-export CERT_FILE=localhost.crt
-export PKCS_FILE=kafka-keystore.p12
-export PKCS_TRUST_FILE=kafka-truststore.p12
-export PEM_FILE_CERT=kafka-cert.pem
-export PEM_FILE_KEY=kafka-key.pem
+If required, you can override the default certificate CN and SAN configuration by passing them as script arguments:
 
-keytool -genkey -alias kafka-test-store -keyalg RSA -keystore ${JKS_FILE} -keysize 2048 -validity 3650 -dname CN=localhost -keypass ${SECRET} -storepass ${SECRET}
-keytool -export -alias kafka-test-store -file ${CERT_FILE} -keystore ${JKS_FILE} -keypass ${SECRET} -storepass ${SECRET}
-keytool -importkeystore -srckeystore ${JKS_FILE} -srcstorepass ${SECRET} -destkeystore ${PKCS_FILE} -deststoretype PKCS12 -deststorepass ${SECRET}
-keytool -keystore ${JKS_TRUST_FILE} -import -file ${CERT_FILE} -keypass ${SECRET} -storepass ${SECRET} -noprompt
-keytool -importkeystore -srckeystore ${JKS_TRUST_FILE} -srcstorepass ${SECRET} -destkeystore ${PKCS_TRUST_FILE} -deststoretype PKCS12 -deststorepass ${SECRET}
-
-rm -f *.crt *.jks
+[source,shell]
+----
+cd src/test/resources/config
+./regenerate-certificates.sh "other-dns-or-ip" "DNS:another-dns,IP:192.168.1.150"
 ----
