--- a/docs/modules/ROOT/pages/reference/extensions/jfr.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jfr.adoc
@@ -75,11 +75,11 @@ $ ./my-application-runner -XX:+FlightRecorder -XX:StartFlightRecording=filename=
 [id="extensions-jfr-usage-flight-recording-in-native-mode"]
 === Flight recording in native mode
 
-To build a native image with Java Flight Recorder support, it is mandatory to enable VM inspection via the following configuration property in `application.properties`.
+To build a native image with Java Flight Recorder support, you must enable it via the following configuration property in `application.properties`.
 
 [source,properties]
 ----
-quarkus.native.enable-vm-inspection=true
+quarkus.native.monitoring=jfr
 ----
 
 
