Add Elasticsearch Low Level Rest Client Fixes #5736
Co-authored-by: James Netherton <jamesnetherton@users.noreply.github.com>

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -113,6 +113,7 @@
 *** xref:reference/extensions/dropbox.adoc[Dropbox]
 *** xref:reference/extensions/ehcache.adoc[Ehcache]
 *** xref:reference/extensions/elasticsearch.adoc[Elasticsearch]
+*** xref:reference/extensions/elasticsearch-rest-client.adoc[Elasticsearch Low level Rest Client]
 *** xref:reference/extensions/etcd3.adoc[Etcd3]
 *** xref:reference/extensions/exec.adoc[Exec]
 *** xref:reference/extensions/fhir.adoc[FHIR]
