--- a/docs/modules/ROOT/pages/reference/extensions/kubernetes.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/kubernetes.adoc
@@ -125,85 +125,85 @@ Whether a Kubernetes Cluster Service should be automatically configured accordin
 | `boolean`
 | `false`
 
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.id]]`link:#quarkus.camel.cluster.kubernetes.id[quarkus.camel.cluster.kubernetes.id]`
-
-The cluster service ID (defaults to null).
-| `string`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.master-url]]`link:#quarkus.camel.cluster.kubernetes.master-url[quarkus.camel.cluster.kubernetes.master-url]`
-
-The URL of the Kubernetes master (read from Kubernetes client properties by default).
-| `string`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.connection-timeout-millis]]`link:#quarkus.camel.cluster.kubernetes.connection-timeout-millis[quarkus.camel.cluster.kubernetes.connection-timeout-millis]`
-
-The connection timeout in milliseconds to use when making requests to the Kubernetes API server.
-| `java.lang.Integer`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.namespace]]`link:#quarkus.camel.cluster.kubernetes.namespace[quarkus.camel.cluster.kubernetes.namespace]`
-
-The name of the Kubernetes namespace containing the pods and the configmap (autodetected by default).
-| `string`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.pod-name]]`link:#quarkus.camel.cluster.kubernetes.pod-name[quarkus.camel.cluster.kubernetes.pod-name]`
-
-The name of the current pod (autodetected from container host name by default).
-| `string`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.jitter-factor]]`link:#quarkus.camel.cluster.kubernetes.jitter-factor[quarkus.camel.cluster.kubernetes.jitter-factor]`
-
-The jitter factor to apply in order to prevent all pods to call Kubernetes APIs in the same instant (defaults to 1.2).
-| `java.lang.Double`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.lease-duration-millis]]`link:#quarkus.camel.cluster.kubernetes.lease-duration-millis[quarkus.camel.cluster.kubernetes.lease-duration-millis]`
-
-The default duration of the lease for the current leader (defaults to 15000).
-| `java.lang.Long`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.renew-deadline-millis]]`link:#quarkus.camel.cluster.kubernetes.renew-deadline-millis[quarkus.camel.cluster.kubernetes.renew-deadline-millis]`
-
-The deadline after which the leader must stop its services because it may have lost the leadership (defaults to 10000).
-| `java.lang.Long`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.retry-period-millis]]`link:#quarkus.camel.cluster.kubernetes.retry-period-millis[quarkus.camel.cluster.kubernetes.retry-period-millis]`
-
-The time between two subsequent attempts to check and acquire the leadership. It is randomized using the jitter factor (defaults to 2000).
-| `java.lang.Long`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.order]]`link:#quarkus.camel.cluster.kubernetes.order[quarkus.camel.cluster.kubernetes.order]`
-
-Service lookup order/priority (defaults to 2147482647).
-| `java.lang.Integer`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.resource-name]]`link:#quarkus.camel.cluster.kubernetes.resource-name[quarkus.camel.cluster.kubernetes.resource-name]`
-
-The name of the lease resource used to do optimistic locking (defaults to 'leaders'). The resource name is used as prefix when the underlying Kubernetes resource can manage a single lock.
-| `string`
-| 
-
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.lease-resource-type]]`link:#quarkus.camel.cluster.kubernetes.lease-resource-type[quarkus.camel.cluster.kubernetes.lease-resource-type]`
-
-The lease resource type used in Kubernetes, either 'config-map' or 'lease' (defaults to 'lease').
-| `org.apache.camel.component.kubernetes.cluster.LeaseResourceType`
-| 
-
 |icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.rebalancing]]`link:#quarkus.camel.cluster.kubernetes.rebalancing[quarkus.camel.cluster.kubernetes.rebalancing]`
 
 Whether the camel master namespace leaders should be distributed evenly across all the camel contexts in the cluster.
 | `boolean`
 | `true`
 
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.kubernetes.labels]]`link:#quarkus.camel.cluster.kubernetes.labels[quarkus.camel.cluster.kubernetes.labels]`
+| [[quarkus.camel.cluster.kubernetes.id]]`link:#quarkus.camel.cluster.kubernetes.id[quarkus.camel.cluster.kubernetes.id]`
+
+The cluster service ID (defaults to null).
+| `string`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.master-url]]`link:#quarkus.camel.cluster.kubernetes.master-url[quarkus.camel.cluster.kubernetes.master-url]`
+
+The URL of the Kubernetes master (read from Kubernetes client properties by default).
+| `string`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.connection-timeout-millis]]`link:#quarkus.camel.cluster.kubernetes.connection-timeout-millis[quarkus.camel.cluster.kubernetes.connection-timeout-millis]`
+
+The connection timeout in milliseconds to use when making requests to the Kubernetes API server.
+| `java.lang.Integer`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.namespace]]`link:#quarkus.camel.cluster.kubernetes.namespace[quarkus.camel.cluster.kubernetes.namespace]`
+
+The name of the Kubernetes namespace containing the pods and the configmap (autodetected by default).
+| `string`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.pod-name]]`link:#quarkus.camel.cluster.kubernetes.pod-name[quarkus.camel.cluster.kubernetes.pod-name]`
+
+The name of the current pod (autodetected from container host name by default).
+| `string`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.jitter-factor]]`link:#quarkus.camel.cluster.kubernetes.jitter-factor[quarkus.camel.cluster.kubernetes.jitter-factor]`
+
+The jitter factor to apply in order to prevent all pods to call Kubernetes APIs in the same instant (defaults to 1.2).
+| `java.lang.Double`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.lease-duration-millis]]`link:#quarkus.camel.cluster.kubernetes.lease-duration-millis[quarkus.camel.cluster.kubernetes.lease-duration-millis]`
+
+The default duration of the lease for the current leader (defaults to 15000).
+| `java.lang.Long`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.renew-deadline-millis]]`link:#quarkus.camel.cluster.kubernetes.renew-deadline-millis[quarkus.camel.cluster.kubernetes.renew-deadline-millis]`
+
+The deadline after which the leader must stop its services because it may have lost the leadership (defaults to 10000).
+| `java.lang.Long`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.retry-period-millis]]`link:#quarkus.camel.cluster.kubernetes.retry-period-millis[quarkus.camel.cluster.kubernetes.retry-period-millis]`
+
+The time between two subsequent attempts to check and acquire the leadership. It is randomized using the jitter factor (defaults to 2000).
+| `java.lang.Long`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.order]]`link:#quarkus.camel.cluster.kubernetes.order[quarkus.camel.cluster.kubernetes.order]`
+
+Service lookup order/priority (defaults to 2147482647).
+| `java.lang.Integer`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.resource-name]]`link:#quarkus.camel.cluster.kubernetes.resource-name[quarkus.camel.cluster.kubernetes.resource-name]`
+
+The name of the lease resource used to do optimistic locking (defaults to 'leaders'). The resource name is used as prefix when the underlying Kubernetes resource can manage a single lock.
+| `string`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.lease-resource-type]]`link:#quarkus.camel.cluster.kubernetes.lease-resource-type[quarkus.camel.cluster.kubernetes.lease-resource-type]`
+
+The lease resource type used in Kubernetes, either 'config-map' or 'lease' (defaults to 'lease').
+| `org.apache.camel.component.kubernetes.cluster.LeaseResourceType`
+| 
+
+| [[quarkus.camel.cluster.kubernetes.labels]]`link:#quarkus.camel.cluster.kubernetes.labels[quarkus.camel.cluster.kubernetes.labels]`
 
 The labels key/value used to identify the pods composing the cluster, defaults to empty map.
 | ``Map<String,String>``
