Add component and endpoint documentation for Qute extension
Fixes #3549

--- a/docs/modules/ROOT/pages/reference/extensions/qute.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/qute.adoc
@@ -40,7 +40,10 @@ endif::[]
 
 [id="extensions-qute-usage"]
 == Usage
-Please refer to the https://quarkus.io/guides/qute[Quarkus Qute].
+include::partial$component-configure-options.adoc[]
+include::partial$component-endpoint-options.adoc[]
+
+For more information about Qute, please refer to the https://quarkus.io/guides/qute[Quarkus Qute] documentation.
 
 
 [id="extensions-qute-camel-quarkus-limitations"]
