--- a/extensions/qute/runtime/src/main/doc/usage.adoc
+++ b/extensions/qute/runtime/src/main/doc/usage.adoc
@@ -1,1 +1,4 @@
-Please refer to the https://quarkus.io/guides/qute[Quarkus Qute].
+include::partial$component-configure-options.adoc[]
+include::partial$component-endpoint-options.adoc[]
+
+For more information about Qute, please refer to the https://quarkus.io/guides/qute[Quarkus Qute] documentation.
