JVM support of BeanIO, OpenSearch and MailMicrosoftOAuth

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -68,6 +68,7 @@
 *** xref:reference/extensions/base64.adoc[Base64]
 *** xref:reference/extensions/bean.adoc[Bean]
 *** xref:reference/extensions/bean-validator.adoc[Bean Validator]
+*** xref:reference/extensions/beanio.adoc[BeanIO]
 *** xref:reference/extensions/bindy.adoc[Bindy]
 *** xref:reference/extensions/bonita.adoc[Bonita]
 *** xref:reference/extensions/box.adoc[Box]
@@ -202,6 +203,7 @@
 *** xref:reference/extensions/mllp.adoc[MLLP]
 *** xref:reference/extensions/mvel.adoc[MVEL]
 *** xref:reference/extensions/mail.adoc[Mail]
+*** xref:reference/extensions/mail-microsoft-oauth.adoc[Mail Microsoft Oauth]
 *** xref:reference/extensions/management.adoc[Management]
 *** xref:reference/extensions/mapstruct.adoc[MapStruct]
 *** xref:reference/extensions/master.adoc[Master]
@@ -222,6 +224,7 @@
 *** xref:reference/extensions/ognl.adoc[OGNL]
 *** xref:reference/extensions/olingo4.adoc[Olingo4]
 *** xref:reference/extensions/openapi-java.adoc[OpenAPI Java]
+*** xref:reference/extensions/opensearch.adoc[OpenSearch]
 *** xref:reference/extensions/openstack.adoc[OpenStack]
 *** xref:reference/extensions/opentelemetry.adoc[OpenTelemetry]
 *** xref:reference/extensions/optaplanner.adoc[OptaPlanner]
