Add spring-rabbitmq as an alternative to rabbitmq in the 3.2.x migration guide
Fixes #5766

--- a/docs/modules/ROOT/pages/migration-guide/3.2.0.adoc
+++ b/docs/modules/ROOT/pages/migration-guide/3.2.0.adoc
@@ -32,7 +32,7 @@ The following extensions have been removed.
 | camel-quarkus-microprofile-metrics        | camel-quarkus-micrometer, camel-quarkus-opentelemtry
 | camel-quarkus-milo                        | none
 | camel-quarkus-opentracing                 | camel-quarkus-micrometer, camel-quarkus-opentelemtry
-| camel-quarkus-rabbitmq                    | none
+| camel-quarkus-rabbitmq                    | camel-quarkus-spring-rabbitmq
 | camel-quarkus-vm                          | camel-quarkus-seda
 | camel-quarkus-xstream                     | camel-quarkus-jacksonxml
 |===
